--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
     "astro": "^5.6.0",
+    "astro-icon": "^1.1.5",
     "tailwindcss": "^4.1.1"
+  },
+  "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.2"
   }
 }
