--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@tailwindcss/vite": "^4.1.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "astro": "^5.6.0",
+    "astro": "^5.8.0",
     "astro-icon": "^1.1.5",
     "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.2.2"
+    "@iconify-json/heroicons": "^1.2.2",
+    "terser": "^5.42.0"
   }
 }
