--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.13.3",
     "astro-icon": "^1.1.5",
+    "astro-seo": "^0.8.4",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
